--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cooking.github.io",
+  "name": "cookingjs.github.io",
   "version": "0.1.0",
   "description": "cooking docs",
   "main": "index.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cookingjs/cooking.github.io.git"
+    "url": "git+https://github.com/cookingjs/cookingjs.github.io.git"
   },
   "keywords": [
     "cooking",
@@ -20,9 +20,9 @@
   "author": "qingwei-li <qingwei.li@ele.me>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cookingjs/cooking.github.io/issues"
+    "url": "https://github.com/cookingjs/cookingjs.github.io/issues"
   },
-  "homepage": "https://github.com/cookingjs/cooking.github.io#readme",
+  "homepage": "https://github.com/cookingjs/cookingjs.github.io#readme",
   "devDependencies": {
     "gh-pages": "^0.11.0",
     "gitbook-cli": "^2.1.3",
