--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "gh-pages": "^0.11.0",
     "gitbook-cli": "^2.1.3",
+    "gitbook-plugin-search-pro": "^1.0.9",
     "gitbook-plugin-toc": "0.0.1"
   }
 }
